--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,12 @@
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu">
-    <li><a href="#work">Accueil</a></li>
-    <li><a href="#about">Villes favorites</a></li>
+    <li><a routerLink="/accueil">Accueil</a></li>
+    <li><a routerLink="/favorites">Villes favorites</a></li>
   </ul>
 </header>
-<body>
+<div class="body-component">
+  <router-outlet></router-outlet>
+</div>
 
-</body>
+
