--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,20 +1,15 @@
-body {
-  margin: 0;
-  font-family: Helvetica, sans-serif;
-  background-color: #f4f4f4;
-}
-
-a {
-  color: #000;
-}
-
 /* header */
-
+.body-component{
+  position: relative;
+  top: 10vh;
+}
 .header {
+  display: block;
   background-color: #fff;
   box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
   position: fixed;
   width: 100%;
+  top: 0;
   z-index: 3;
 }
 
